Revision history for File::DataClass

0.21.16   2013-06-25 15:57:50
          - Lazy load CHI. Added reset to ::IO
          - Updated synopsis for ::IO
          - Removed ::Constraints
          - Switched to Exporter for speed
          - Refactored ::Types
          - Made ::IO::name lazy
          - Renamed ::Constraints to ::Types
          - Mooified the rest
          - Mooified ::IO

0.20.15   2013-06-25 15:36:17
          - Fixed defined/false bug in ::HashMerge
          - Delayed loading storage class for Any
          - Added File::Path as a prereq again
          - Updated prereqs in Build.PL
          - Exception class depends on Unexpected
          - Fixed spelling test
          - Can set trait namespace
          - Exception manages own trait loading

0.19.1    2013-05-02 15:11:09
          - Replaced subroutine_filter with filtered_frames
          - Added subroutine_filter to TracingStacks
          - Tidied exception class
          - Exception error type now a string

0.18.11   2013-05-01 21:44:47
          - Switched Simple for Base
          - Added tests for previous_exception
          - Renamed exception traits
          - Added previous_exception to F:DC:TraitFor::ThrowingExceptions
          - Updated README.md
          - Fixed spelling
          - Updated POD
          - Extracted F:DC:Exception::Simple
          - Extracted F:DC:TraitFor::PrependingErrorLeader
          - Tightened F:DC:Exception and Traits
          - Enabled automatic Rev keyword expansion
          - Switched from SVN to Git

0.17.450  2012-04-29
          - Enhanced Exception class

0.16.446  2012-04-24
          - Preserve execute permission during substitute method

0.16.445  2012-04-24
          - XML::Bare 0.48 reverts to old &amp; behaviour
          - Stopped HashMerge adding the name attribute

0.16.442  2013-04-15
          - Added Stauner d2777308-a5e7-11e2-83b7-87183f85d660 to list of
            CPAN Testers who should pack up and go home
